[package]
name = "image_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rust-s3 = "0.35.1"
base64 = "0.22.1"

image = "0.25.5"
nifti_decoder = { path = "../nifti_decoder" }
