[package]
name = "image_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

rust-s3 = "0.35.1"
base64 = "0.22.1"
tar = "0.4.43"

image = "0.25.5"
dicom = { version = "0.8.1", features = ["image"] }
nifti_decoder = { path = "../nifti_decoder" }
